fix(App): fixes BrowseBy spilling off the screen, transition glitches

--- a/src/components/BrowseBy/styles.scss
+++ b/src/components/BrowseBy/styles.scss
@@ -16,6 +16,8 @@
     position: relative;
     top: -7px;
 
+    width: 160px;
+
     margin-right: 16px;
 
     color: $Gray160;
@@ -26,7 +28,7 @@
 
       position: relative;
 
-      width: 160px;
+      width: 100%;
       height: 24px;
 
       padding-top: 1px;
@@ -42,7 +44,7 @@
       overflow: hidden;
     }
 
-    &.zeroWidth .browseLabel {
+    &.zeroWidth {
       width: 0px;
     }
 
